Add alias test and scenario test